# promptc

./: .gitignore  README.md  pyproject.toml
promptc/: cli.py  compiler.py  config.py  models.py  repl.py  utils.py
promptc/defaults/: policy.yaml
promptc/defaults/evals/: basic.json
promptc/defaults/profiles/: beginner_teacher.yaml  critic.yaml  expert.yaml
promptc/defaults/workflows/: analyze.yaml  decide.yaml  explain.yaml  summarize.yaml
promptc/dspy/: lm.py  programs.py  signatures.py
promptc/engines/: dspy_optimize.py  evaluate.py  intent.py  optimize.py  profile.py  render.py  signature.py  techniques.py  workflow.py
promptc/storage/: fs.py  interfaces.py
tests/: test_cli.py  test_compile.py  test_components.py  test_dspy_lm.py  test_dspy_programs.py
