[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptc"
version = "0.1.0"
description = "Local DSPy-based prompt compiler"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "dspy-ai>=2.5.0",
  "prompt_toolkit>=3.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
promptc = "promptc.cli:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["promptc*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.uv]
package = true
default-groups = ["dev"]
